Update vaccine,health check form(status DRAFT, SENT) - enum